jEdit 5.2 version history
       (changes since jEdit 5.1pre1)
:encoding=UTF-8:

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler for contributing to this release.

{{{ Bug Fixes


}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: